# slate

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: CanvasStore.cpp  CanvasStore.h  DesktopEmbedder.cpp  DesktopEmbedder.h  InfiniteCanvas.cpp  InfiniteCanvas.h  Toolbar.cpp  Toolbar.h  main.cpp
src/items/: FreehandLineItem.cpp  FreehandLineItem.h  ImageDropItem.cpp  ImageDropItem.h  SelectionOverlay.cpp  SelectionOverlay.h  ShapeItem.cpp  ShapeItem.h  TextNoteItem.cpp  TextNoteItem.h
